<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocationService</string>
    <string name="title_activity_example_activity">ExampleActivity</string>
    <string name="action_settings">Settings</string>
    <string name="get_location">Get location</string>
    <string name="location_example_service">Location Example Activity</string>
    <string name="longitude_">Longitude:</string>
    <string name="latitude_">Latitude:</string>
    <string name="default_value">-</string>
    <string name="address_">Address:</string>
    <string name="country_">Country:</string>

</resources>