<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" 
	android:layout_height="match_parent" 
	android:orientation="vertical">
   
	<LinearLayout 
		android:id="@+id/listView"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:layout_weight="1"
		android:paddingTop="12dp"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:orientation="vertical">
     
		<TextView 
			android:id="@+id/header"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:text="@string/location_example_service"
			android:textSize="20sp" />
		
		<View 
		    android:layout_width="fill_parent"
			android:layout_height="2dip"
			android:background="#000000" />
		
		<LinearLayout 		
		    android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:paddingTop="20dp"
			android:orientation="horizontal">
		
			<TextView
			    android:id="@+id/longitude"
			    android:layout_width="75dp"
			    android:layout_height="wrap_content"
			    android:text="@string/longitude_"
			    android:textSize="12sp" />
			
			<TextView 
			    android:id="@+id/longitude_value"
			    android:layout_width="75dp"
			   	android:layout_height="wrap_content"
			    android:text="@string/default_value"
			    android:textSize="12sp" />
		
		</LinearLayout>
			
		<LinearLayout 		
		    android:layout_width="match_parent" 
			android:layout_height="wrap_content"
			android:paddingTop="20dp"
			android:orientation="horizontal">
		
			<TextView
			    android:id="@+id/latitude"
			    android:layout_width="75dp"
			    android:layout_height="wrap_content"
			    android:text="@string/latitude_"
			    android:textSize="12sp" />
			
			<TextView 
			    android:id="@+id/latitude_value"
			    android:layout_width="75dp"
			   	android:layout_height="wrap_content"
			    android:text="@string/default_value"
			    android:textSize="12sp" />
		
		</LinearLayout>
		
		<View 
		    android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="#CCCCCC" />
	
	</LinearLayout>
  
	<Button 
		android:id="@+id/getLocationButton"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/get_location"
		android:layout_weight="0"/>
  
</LinearLayout>