<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp" >

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/location_example_service"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginTop="10dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/longitude"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/longitude_"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/longitude_value"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/latitude"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/latitude_"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/latitude_value"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="10dp"
            android:background="#CCCCCC" />

        <TextView
            android:id="@+id/address"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/address_"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/address_value"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/city"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="City:"
            android:textSize="12sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/city_value"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/country"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/country_"
            android:textSize="12sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/country_value"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/getLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/get_location" />

</LinearLayout>